<resources>
    <string name="app_name">Nerdy News</string>

    <!-- Strings related to login -->

    <string name="eventos">Events</string>
    <string name="interes">Interests</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="perfil_usuario">Profile</string>
    <string name="cerrar_sesion">Logout</string>
    <string name="ajustes">Settings</string>

    <string name="email">E-mail</string>
    <string name="hintemail">Enter Email</string>
    <string name="password">Password</string>
    <string name="hintpassword">Enter Password</string>
    <string name="login">Log in</string>
    <string name="olvidocontrasena">I forgot my password</string>
    <string name="borrar">Delete</string>
    <string name="mostrarcontrasena">Show password</string>
    <string name="mantenersesioniniciada">Keep me signed in</string>
    <string name="iniciarsesion">Log in</string>
    <string name="cuenta1">You do not have an account?</string>
    <string name="cuenta2">Create a</string>

    <string name="irLogin">Already have an account?</string>
    <string name="registrarCuenta">Register your account</string>
    <string name="registro">Registry</string>
    <string name="recuerdo">Do you remember your password?</string>
    <string name="conectate">Connect</string>
    <string name="recuperacontrasena">Reset your password</string>
    <string name="olvidocontrasenamain">Recover account</string>
    <string name="ejecutadoolvidocontrasena">Follow the steps sent to your %1$s email address to retrieve your password</string>
    <string name="faltaemail">You must indicate the email address of your account!</string>

    <string name="titintereses">Interests Available</string>
    <string name="addinteresfavorito">Interest added to favorites</string>
    <string name="existsfavorito">The interest is already in favorites</string>
    <string name="deletefavorito">Interest removed from favorites</string>
    <string name="searchinteres">Enter a text</string>
    <string name="titfavoritos">Favorite interests</string>

    <string name="datosobligatorioslogin">You must enter your email and password to log in</string>
    <string name="datosobligatoriosregistro">To register your account you must provide an email and a password</string>
    <string name="cuentacreada">An email has been sent to %1$s to validate your account</string>

    <string name="faltaimplementar">Missing Implement</string>
    <string name="transition_name_img">transition: IMG</string>
    <string name="transition_name_img_amigo">transition: IMGAMIGO</string>
    <string name="btnAsistir">I will attend</string>
    <string name="anadir_calendario">Add</string>
    <string name="compartir">Share</string>

    <string name="lore_ipsum_2para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pretium ligula nunc, vel lobortis tortor dignissim congue. Vivamus tincidunt mauris non imperdiet lacinia. Maecenas non mattis nunc. Quisque non semper enim. Mauris neque arcu, efficitur eu sapien id, tincidunt porta massa. </string>
    <string name="perfil">Profile</string>
    <string name="intereses">Interests (3)</string>
    <string name="gpr_1985">GPR1985</string>
    <string name="button_undo">Undo</string>
    <string name="conectarcon">Connect with:</string>

    <!-- Perfil -->
    <string name="titperfil">Profile of:</string>
    <string name="titperfilcabecerabienvenida">Welcome to the NerdyNews community. Thanks for signing up with us. Next, you can set up your account.</string>
    <string name="hintalias">Alias ​​(optional)</string>
    <string name="hintpasswordperfil">Change password (optional)</string>
    <string name="hintotros">Tell us about you (optional)</string>
    <string name="datosperfil"> Enter your name and add a profile photo (optional).</string>
    <string name="recibirnotificaciones">Enable notifications</string>
    <string name="compartiremail">Share email with friends</string>
    <string name="grabarperfil">Save profile</string>
    <string name="fechanacimiento">Date of Birth</string>
    <string name="titperfilpersonal">Personal Information (Optionally you can tell us more about yourself)</string>
    <string name="hintnombre">Name and surname </string>
    <string name="hintedad">Age </string>
    <string name="hintciudad">City </string>
    <string name="hintcodigopostal">Postcode </string>
    <string name="hintmasdatos">Tell us more about yourself</string>
    <string name="datosobligatoriosperfil">You must enter a password. </string>
    <string name="perfilcreado">Saved profile </string>

    <!-- Amigos -->
    <string name="amigos">Friends</string>
    <string name="misamigos">My friends</string>
    <string name="buscaramigos">Search friends</string>
    <string name="titbuscaramigos">Search Friends</string>
    <string name="agregar_amigo">Added to my friends (forever alone)</string>
    <string name="nombreyapellidos">Name and surname</string>
    <string name="edad">Age</string>
    <string name="anyadiramigo">You made friends with</string>
    <string name="borraramigo">You\'re no longer a friend of</string>


    <!--widget -->
    <string name="proximoevento">NEXT EVENT</string>
    <string name="conferenciaDC">DC COMICS Conference</string>
    <string name="fechawidget">06/12/2017</string>
    <string name="titulowidget">DC COMICS Conference Barcelona</string>
    <string name="resumenwidget">Come to the DC Comics event that takes place in Barcelona. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu nisi magna. Curabitur sit amet lacus eget magna tempor tristique id nec turpis. Nam in rhoncus elit, in sagittis nisi. Nulla dictum tincidunt nunc id eleifend. Morbi ut nulla feugiat, ill velit et, hendrerit pain. Curabitur lorem ipsum, lacinia ac nulla finibus, pellentesque posuere purus. Suspendisse et just non nisi consectetur congue ut in velit. Morbi to euismod massa. Sed aliquet ligula est, ut tristique dui ullamcorper id. Cras iaculis diam arcu, eget efficienur mi fringilla et.Nam arcu ipsum, pulvinar ac turpis sed, posuere hendrerit arcu. Aenean orci leo, pellentesque eget metus quis, mollis venenatis nisi. Etiam tristique interdum quam, in vulputate elit pellentesque in. Morbi maximus tortor at turpis rhoncus gravida. Duis et enim ante. Thirst velit enim, sodales to luctus nec, mollis dapibus metus. Ut non nisl sed eros rutrum posuere vel quis nibh. Suspendisse fermentum vulputate mi et consequat.</string>
    <string name="lugawidget">Train station</string>
    <string name="coordGPS">41.3946973,2.1826039000000037</string>
    <string name="imageUrl">http://www.heroescomicconmadrid.com/app/uploads/COMIC-560x261.png</string>
    <string name="micalendario">My calendar</string>
    <string name="indiquemetodo">Search by:</string>
    <string name="buscareventos">Find Events</string>
    <string-array name="opcionesbusqueda">
        <item>Proximity</item>
        <item>Date</item>
    </string-array>
    <string name="proximidad">Proximity</string>
    <string name="fecha">Date</string>
    <!-- Listado mensajes -->
    <string name="nav_mensajes">My messages</string>
    <string name="mensajes">Message history</string>
    <string name="favoritos">Favorites</string>
    <string name="please_take_a_second_for_rate">Please take a second for rate</string>
    <string name="_1_love_masterlistas_please_rate_5_star_in_play_store">1. Love Nerdy News, please rate 5 star in Play Store</string>
    <string name="_2_have_problems_please_contact_author_to_report_issue">2. Have problems, please contact author to report issue</string>
    <string name="contact_author">CONTACT AUTHOR</string>
    <string name="rate_5_star">RATE 5 STAR</string>
    <string name="payLoad">Premium NerdyNews. Remove ads and use the calendar</string>
    <string name="compracompletada">Buy complete. You are now premium</string>
    <string name="debespremium">You have to be premium to use this option</string>
    <string name="permisomessage">This APP can use your GPS to show you the nearest events. For that we need yo use your GPS. We\'re going to ask GPS\'s permission.</string>
    <string name="permisotitle">Permission\'s needed</string>
</resources>
