<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_padre_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_margin="0dp"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagenwidget"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/ic_interes_dccomics" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imagenwidget"
                android:text="@string/proximoevento"
                android:textAlignment="center"
                android:textColor="@color/blanco"
                android:textSize="26sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imagenwidget"
                android:textAlignment="center"
                android:text="@string/conferenciaDC"
                android:textColor="@color/blanco"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imagenwidget"
                android:textAlignment="center"
                android:text="@string/fechawidget"
                android:textColor="@color/blanco"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>