<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.proyecto.nerdynews.OlvidoActivity">

    <ScrollView
        android:id="@+id/olvido_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:src="@drawable/ic_logo"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/olvidocontrasenamain"
                android:textSize="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="30dp"
                android:textAlignment="center"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintemail"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:drawableLeft="@android:drawable/ic_dialog_email"
                        android:drawablePadding="10dp"/>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/crossemail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/cross"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:onClick="resetField"
                    android:layout_margin="5dp"
                    android:text="Button"/>


            </RelativeLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/recuperacontrasena"
                android:onClick="olvidocontrasena"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/cuenta1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/recuerdo"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/cuenta2"
                    android:clickable="true"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/cuenta1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:onClick="irLogin"
                    style="@style/linkColor"
                    android:text="@string/conectate" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
